--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <body>
      Default page
      <br><br>
-     <a href="./sendSms.html">Send SMS Page</a>
+     <a href="./sendSms.html">Send SMS Sample</a>
+     <br>
+     <a href="./couponWidget.html">Coupon Widget Sample</a>
   </body>
 </html>
